--- a/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
+++ b/src/app/shared/detail-shared/settings-panel/settings-panel.component.scss
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   padding: var(--space-md);
-  background: var(--view-bg-color);
+  background: var(--window-bg-color);
   border-radius: var(--item-radius);
   transition: var(--transition-standard);
   box-shadow: var(--box-shadow);
