--- a/src/app/features/modals/settings/preferences-modal/preferences-modal.component.scss
+++ b/src/app/features/modals/settings/preferences-modal/preferences-modal.component.scss
@@ -149,7 +149,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  background: var(--card-bg-color);
+  background: var(--view-bg-color);
   padding: var(--space-md) var(--space-lg);
   border-radius: var(--radius-sm);
   box-shadow: var(--shadow-gnome);
