--- a/src/app/shared/components/setting-control/setting-control.component.scss
+++ b/src/app/shared/components/setting-control/setting-control.component.scss
@@ -29,7 +29,7 @@
 }
 
 .setting-item {
-  background: var(--secondary-background);
+  background: var(--view-bg-color);
   border-radius: var(--radius-lg);
   padding: var(--space-lg);
   box-shadow: var(--shadow-gnome);
