--- a/src/app/shared/detail-shared/job-info-panel/job-info-panel.component.scss
+++ b/src/app/shared/detail-shared/job-info-panel/job-info-panel.component.scss
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   padding: var(--item-padding);
-  background: rgba(var(--window-fg-color-rgb), var(--background-opacity));
+  background: var(--sidebar-bg-color);
   border-radius: var(--item-radius);
   transition: var(--transition-standard);
 }
