--- a/src/app/features/modals/settings/backend-modal/backend-modal.component.scss
+++ b/src/app/features/modals/settings/backend-modal/backend-modal.component.scss
@@ -263,7 +263,7 @@ form {
   }
 
   .tab-content {
-    padding: var(--space-md) 0;
+    padding: var(--space-md);
     display: flex;
     flex-direction: column;
     gap: var(--space-md);
