--- a/src/app/features/components/dashboard/general-detail/general-detail.component.scss
+++ b/src/app/features/components/dashboard/general-detail/general-detail.component.scss
@@ -88,7 +88,7 @@
   gap: var(--space-xs);
   padding: 8px 12px;
   border-radius: 20px;
-  background: var(--window-fg-color-rgb);
+  background: var(--view-bg-color);
   transition: var(--transition-standard);
   box-shadow: var(--box-shadow);
   cursor: pointer;
